add db connection and add Services

--- a/WorkShiftAnalyzer/appsettings.json
+++ b/WorkShiftAnalyzer/appsettings.json
@@ -5,5 +5,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+
+    "MySite": "Server=.;Database=Test;Trusted_connection=true;TrustServerCertificate=true;"
+
+
+  }
 }
