--- a/Application/Application.csproj
+++ b/Application/Application.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Data\2.Data.csproj" />
+  </ItemGroup>
+
 </Project>
