--- a/WorkShiftAnalyzer/WorkShiftAnalyzer.csproj
+++ b/WorkShiftAnalyzer/WorkShiftAnalyzer.csproj
@@ -6,4 +6,15 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.10" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Application\Application.csproj" />
+    <ProjectReference Include="..\Data\2.Data.csproj" />
+    <ProjectReference Include="..\Domain\1.Domain.csproj" />
+    <ProjectReference Include="..\IOC\IOC.csproj" />
+  </ItemGroup>
+
 </Project>
